--- a/scripts/kind-e2e/kind-cluster-config.yaml
+++ b/scripts/kind-e2e/kind-cluster-config.yaml
@@ -2,6 +2,10 @@ kind: Cluster
 apiVersion: kind.sigs.k8s.io/v1alpha3
 networking:
   disableDefaultCNI: ${disable_cni}
+containerdConfigPatches:
+- |-
+  [plugins."io.containerd.grpc.v1.cri".registry.mirrors."localhost:5000"]
+    endpoint = ["http://${registry_ip}:5000"]
 kubeadmConfigPatches:
 - |
   apiVersion: kubeadm.k8s.io/v1beta1
